# evo

./: CMakeLists.txt
src/main/: main.c
src/main/common/: bitmap.c  heap.c
src/main/interpreter/: env.c  env.h  environment.c  environment.h
src/main/ir/: ir.c  ir.h  ir_define.def  ir_ref.c  ir_ref.h
src/main/legacy/common/: bitmap.h  heap.h
src/main/legacy/lex/: char_reader.h  character.c  character.h  lexer.c  lexer.h  matcher.c  matcher.h  operators.h  source_info.c  source_info.h  token.h
src/main/lex/: char_reader.c  char_stream.c  character.c  character.h  lexer.c  lexer.h  source_info.c  source_info.h  token.c  token.h
src/main/lexer/: basic_char_stream.c  basic_char_stream.h  char_stream.c  char_stream.h  character.h  file_char_stream.c  file_char_stream.h  lexer.c  lexer.h  source_info.c  source_info.h  token.c  token.h  token_define.def
src/main/memory/: memory.c  memory.h
src/main/module/: module.c  module.h  operator_table.h  symbol_table.c
src/main/parser/: ast.c  ast.h  ast_define.def  infix_parser.c  infix_parser.h  operator_table.c  operator_table.h  parser.c  parser.h  parser_context.c  parser_context.h  ps_context.c  ps_context.h  ps_module.c  ps_module.h  symbol_name.c  symbol_name.h  symbol_table.c  symbol_table.h  token_stream.c  token_stream.h  type.c  type.h  type_table.c  type_table.h  utils.h  var_table.c  var_table.h
src/main/parser/module/: module.c  module.h  operator_table.c  var_table.h
src/main/parser/scope/: ps_frame.c  ps_frame.h  ps_scope.c  ps_scope.h
src/main/type/: fun.c  fun.cpp  fun.h  fun_map.c  fun_map.h  fun_table.c  fun_table.h  struct.c  struct.h  type.c  type.h  type_table.c  type_table.c.cpp  type_table.c.h  type_table.h
src/main/utils/: hashmap.c  hashmap.h  list.h  matcher.c  matcher.h  memory.h  pair.c  pair.h  sbuilder.c  sbuilder.h  stack.c  stack.h  string.c  string.h  vector.c  vector.h
src/test/: array.c
src/test/c/: array.c  list.c
src/test/evo/: list.evo  prelude.evo
src/test/flex/: test.flex
src/test/interpreter/: test_interpreter.c
src/test/lex/: test_lexer.c
src/test/lexer/: test_lexer.c
src/test/parser/: test_parser.c
src/test/utils/: test_matcher.c
